@@ -2,6 +2,8 @@ Nutch Change Log
 
 Release 2.1 (22/02/2012)
 
+* NUTCH-1379 NPE when reprUrl is null in ParseUtil (ferdy)
+
 * NUTCH-1378 HostDb NullPointerException (ferdy)
 
 * NUTCH-XX Commit to add configuration for separation of ant distribution targets (lewismc + jnioche)
